@@ -194,6 +194,10 @@ class PERFETTO_EXPORT Tracing {
   // this call is made.
   static void ResetForTesting();
 
+  // Informs the tracing services to activate any of these triggers if any
+  // tracing session was waiting for them.
+  static void ActivateTriggers(const std::vector<std::string>& triggers);
+
  private:
   static void InitializeInternal(const TracingInitArgs&);
 
